--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,17 +4,21 @@ ktor {
         port = ${?PORT}
     }
     application {
-        modules = [ no.nav.helse.PleiepengerJoarkKt.pleiepengerJoark ]
+        modules = [ no.nav.helse.PleiepengerOppgaveKt.pleiepengerOppgave ]
     }
 }
 nav {
     rest_api {
-        authorized_systems = "pleiepenger-prosessering",
+        authorized_systems = "pleiepenger-joark",
         authorized_systems = ${?REST_API_AUTHORIZED_SYSTEMS}
     }
-    joark {
-        inngaaende_forsendelse_url = "http://localhost:8082/rest/mottaInngaaendeForsendelse"
-        inngaaende_forsendelse_url = ${?JOARK_INNGAAENDE_FORSENDELSE_URL}
+    oppgave {
+        base_url = "http://localhost:8085",
+        base_url = ${?OPPGAVE_BASE_URL}
+    }
+    sparkel {
+        base_url = "http://localhost:8085",
+        base_url = ${?SPARKEL_BASE_URL}
     }
     authorization {
         token_url = "http://localhost:8083/token"
@@ -24,7 +28,7 @@ nav {
         issuer = "foo"
         issuer = ${?ISSUER}
         service_account {
-            client_id = "srvpleiepenger-joark"
+            client_id = "srvpleiepenger-opp"
             client_id = ${?SERVICE_ACCOUNT_CLIENT_ID}
             client_secret = "bar"
             client_secret = ${?SERVICE_ACCOUNT_CLIENT_SECRET}
