--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,6 +4,7 @@ ktor {
         port = ${?PORT}
     }
     application {
+        id = "pleiepenger-oppgave"
         modules = [ no.nav.helse.PleiepengerOppgaveKt.pleiepengerOppgave ]
     }
 }
