--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -14,24 +14,24 @@ nav {
         authorized_systems = ${?REST_API_AUTHORIZED_SYSTEMS}
     }
     oppgave {
-        base_url = "http://localhost:8085",
+        base_url = "",
         base_url = ${?OPPGAVE_BASE_URL}
     }
     sparkel {
-        base_url = "http://localhost:8085",
+        base_url = "",
         base_url = ${?SPARKEL_BASE_URL}
     }
     authorization {
-        token_url = "http://localhost:8083/token"
+        token_url = ""
         token_url = ${?TOKEN_URL}
-        jwks_url = "http://localhost:8084/jwk-set"
+        jwks_url = ""
         jwks_url = ${?JWKS_URL}
-        issuer = "foo"
+        issuer = ""
         issuer = ${?ISSUER}
         service_account {
             client_id = "srvpleiepenger-opp"
             client_id = ${?SERVICE_ACCOUNT_CLIENT_ID}
-            client_secret = "bar"
+            client_secret = ""
             client_secret = ${?SERVICE_ACCOUNT_CLIENT_SECRET}
             scopes = "openid"
             scopes = ${?SERVICE_ACCOUNT_SCOPES}
