oppdatert ktor og gatewayer.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -21,20 +21,22 @@ nav {
         base_url = "",
         base_url = ${?SPARKEL_BASE_URL}
     }
-    authorization {
-        token_url = ""
-        token_url = ${?TOKEN_URL}
-        jwks_url = ""
-        jwks_url = ${?JWKS_URL}
-        issuer = ""
-        issuer = ${?ISSUER}
-        service_account {
+    auth {
+        issuers = [{
+            alias = "nais-sts",
+            jwks_uri = ""
+            jwks_uri = ${?JWKS_URL}
+            issuer = ""
+            issuer = ${?ISSUER}
+        }]
+        clients = [{
+            alias = "nais-sts"
             client_id = "srvpleiepenger-opp"
             client_id = ${?SERVICE_ACCOUNT_CLIENT_ID}
             client_secret = ""
             client_secret = ${?SERVICE_ACCOUNT_CLIENT_SECRET}
-            scopes = "openid"
-            scopes = ${?SERVICE_ACCOUNT_SCOPES}
-        }
+            token_endpoint = ""
+            token_endpoint = ${?TOKEN_URL}
+        }]
     }
 }
