Mulighet for å konfigurere opp Azurev1 og Azurev2

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -23,11 +23,35 @@ nav {
     }
     auth {
         issuers = [{
-            alias = "nais-sts",
+            alias = "nais-sts"
             jwks_uri = ""
             jwks_uri = ${?JWKS_URL}
             issuer = ""
             issuer = ${?ISSUER}
+        }, {
+            alias = "azure-v1"
+            type = "azure"
+            audience = ""
+            audience = ${?AZURE_CLIENT_ID}
+            discovery_endpoint = ""
+            discovery_endpoint = ${?AZURE_V1_DISCOVERY_ENDPOINT}
+            azure {
+                require_certificate_client_authentication = "true"
+                authorized_clients = ""
+                authorized_clients = ${?AZURE_AUTHORIZED_CLIENTS}
+            }
+        }, {
+            alias = "azure-v2"
+            type = "azure"
+            audience = ""
+            audience = ${?AZURE_CLIENT_ID}
+            discovery_endpoint = ""
+            discovery_endpoint = ${?AZURE_V2_DISCOVERY_ENDPOINT}
+            azure {
+                require_certificate_client_authentication = "true"
+                authorized_clients = ""
+                authorized_clients = ${?AZURE_AUTHORIZED_CLIENTS}
+            }
         }]
         clients = [{
             alias = "nais-sts"
