brukte testdep nå som den er tilgjengelig + oppdaterte circle workflow

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,13 +19,38 @@ jobs:
           key: gradle-{{ checksum "build.gradle.kts" }}
       - nais/docker-deploy:
           image: navikt/pleiepenger-oppgave
+  check:
+    working_directory: ~/pleiepenger-oppgave
+    docker:
+      - image: 'circleci/openjdk:11-jdk'
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - gradle-{{ checksum "build.gradle.kts" }}
+      - run: ./gradlew check shadowJar
+      - save_cache:
+          paths:
+            - ~/.gradle
+          key: gradle-{{ checksum "build.gradle.kts" }}
 
 workflows:
   version: 2
   deploy-docker-and-nais:
     jobs:
+      - check:
+          filters:
+            branches:
+              ignore:
+                - master
+                - /dev-.*/
       - build:
           context: NAIS deployment
+          filters:
+            branches:
+              only:
+                - master
+                - /dev-.*/
       - nais/deploy:
           name: dev-deploy
           build-and-push-docker-image: false
@@ -53,6 +78,7 @@ workflows:
           team: dusseldorf
           filters:
             branches:
-              only: master
+              only:
+                - master
           requires:
             - build
