client bruker discovery URL

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -53,8 +53,8 @@ nav {
             client_id = ${?SERVICE_ACCOUNT_CLIENT_ID}
             client_secret = ""
             client_secret = ${?SERVICE_ACCOUNT_CLIENT_SECRET}
-            token_endpoint = ""
-            token_endpoint = ${?TOKEN_URL}
+            discovery_endpoint = ""
+            discovery_endpoint = ${?NAIS_STS_DISCOVERY_ENDPOINT}
         }],
         nais-sts {
             authorized_clients = "srvpps-prosessering",
