Oppdaterte NAIS config

--- a/nais/dev-fss.yml
+++ b/nais/dev-fss.yml
@@ -44,6 +44,8 @@ spec:
       value: https://sparkel.nais.preprod.local
     - name: NAIS_STS_DISCOVERY_ENDPOINT
       value: https://security-token-service.nais.preprod.local/rest/v1/sts/.well-known/openid-configuration
+    - name: NAIS_STS_AUTHORIZED_CLIENTS
+      value: srvpps-prosessering
     - name: AZURE_V1_DISCOVERY_ENDPOINT
       value: https://login.microsoftonline.com/966ac572-f5b7-4bbe-aa88-c76419c0f851/.well-known/openid-configuration
     - name: AZURE_V2_DISCOVERY_ENDPOINT
