--- a/nais/prod-fss.yml
+++ b/nais/prod-fss.yml
@@ -36,6 +36,7 @@ spec:
     path: /metrics
   vault:
     enabled: true
+  webproxy: true
   env:
     - name: OPPGAVE_BASE_URL
       value: https://oppgave.nais.adeo.no
@@ -43,3 +44,13 @@ spec:
       value: https://sparkel.nais.adeo.no
     - name: NAIS_STS_DISCOVERY_ENDPOINT
       value: https://security-token-service.nais.adeo.no/rest/v1/sts/.well-known/openid-configuration
+    - name: NAIS_STS_AUTHORIZED_CLIENTS
+      value: srvpps-prosessering
+    - name: AZURE_V1_DISCOVERY_ENDPOINT
+      value: https://login.microsoftonline.com/62366534-1ec3-4962-8869-9b5535279d0b/.well-known/openid-configuration
+    - name: AZURE_V2_DISCOVERY_ENDPOINT
+      value: https://login.microsoftonline.com/62366534-1ec3-4962-8869-9b5535279d0b/v2.0/.well-known/openid-configuration
+    - name: AZURE_CLIENT_ID
+      value: b0e812c2-9fbb-4f3d-b004-ad364402014a
+    - name: AZURE_AUTHORIZED_CLIENTS
+      value: 84ef0905-64b3-440b-8f6a-0d88ef81a0f0
